Start of the big refactor of all downstram modules